--- a/src/markdown/english/1. Introduction.md
+++ b/src/markdown/english/1. Introduction.md
@@ -39,6 +39,8 @@ One of the things Krishnamurti (philosopher) talks about is being in an internal
 
 I also would like you to approach this book with the aim to gain new insight and understandings, rather than trying to *believe your problems away*. Evidence shows that you must truly understand the reality of habits/addictions to change your decision making, and blind belief does not help that.
 
+I may use the terms good/bad in this book, but when I use those terms I actually mean "leading to freedom" or "leading to delusion". We have applied the label good and bad to basically everything, but I want you to step back and to digest things for what they really are - without preconceptions blinding your view.
+
 Have fun reading!
 
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
