--- a/src/markdown/english/3. Effects.md
+++ b/src/markdown/english/3. Effects.md
@@ -48,6 +48,10 @@ Increased brain fog is another effect that porn creates. Porn lowers brain chemi
 
 Dopamine is the reason that motivation does not work for becoming free from porn (and addictions in general). Dopamine is a large part of motivation itself. And if the anticipation for porn outweighs the anticipation for quitting, then you will relapse. Then what works? Understanding of truth. Deep understandings, that are not beliefs, that bring reality to light. This is what works.
 
+Porn use also contributes to Dopamine Deficient Depression (DDD), as the low dopamine periods without porn are not at the levels they are meant to be. This can cause low energy, drowsiness, the inability to feel enthusiastic about anything, no motivation and excessive sleep.
+
+PIED (Porn-Induced Erectile Disfunction) is another effect that comes from porn use. For those who have not experienced it, they may say "that will never happen", however, as comsumption becomes more impulsive and obsessive, it can make in-real-life experiences not turn you on.
+
 There are even more mental and physical negatives of porn I could dive into. I could go into all of the complex neurochemistry, I could tell you about chemicals you don't really need to know but I won't. Why? Because knowing the negatives of porn is not what will allow you to leave. There are detailed and reviewed studies on the effects of porn (such as YourBrainOnPorn) and other internet subcultures. However, these are not enough to rid the mind of the brainwashing and are never enough reasoning to make the user quit.
 
 This is because your brain does not care about negatives when it is in a reactionary state; it reacts to emotions through the pathways you have used the most.
