--- a/src/markdown/english/4. Brainwashing.md
+++ b/src/markdown/english/4. Brainwashing.md
@@ -41,12 +41,16 @@ Examples of what users say:
 
 Someone repeating these mantras to themselves is a form of subconscious rationalization used to justify their biological addiction.
 
+## Brainwashing Through Bad Advice
+Unfortunately, the world is filled with bad advice. So much in fact, that it makes sense for the majority to not be successful in what they truly want to achieve. The individual has to filter out the effective information from the ineffective information. It takes effort, but it is a liberating process that provides one the steering wheel on life. However, most have been conditioned to hand over the reigns to "professionals" who seemingly know everything. This opens the gates for shallow advice, con artists, and wasting time.
+
+The trouble with advice that does not work - is that those that preach it - pronounce their advice as given fact. For one who wants to truly understand the scope of their addiction and how recovery works, if they do not unlearn these negative practices and unproductive ways of thinking then they will be forever held to them.
+
+
 ## The Path Towards Peace
 When self-improvement fails, work on discovering the truth. The search for peace is really the search for truth. Try to see the advantage of understanding things by discovering the truth rather than by practice.
 
 When you discover the truth, bad habits can disappear with little effort through understanding.
-
-Let’s say I’m trying to quit smoking. There are techniques I can try, but they’re commonly painful and difficult. Often, a moment will come when I see myself in a new way that allows the habit to disappear by itself. I get a diagnosis of lung cancer and understand I’m going to die, or I see a friend get in trouble with similar bad habits. When I see something clearly enough and understand it, the bad habit can dissolve by itself.
 
 More broadly, I may see some facet of myself that I don’t like. Maybe I see it in a friend and then can’t unsee it to the point that we can no longer be friends.
 
