--- a/src/markdown/english/5. Love.md
+++ b/src/markdown/english/5. Love.md
@@ -1,23 +1,55 @@
-Sex isn’t fulfilling, intimacy is. Intimacy is actually an emotional need, not just physical, even for men. Porn does not provide intimacy, it keeps you from finding it.
+Love is an important part of your understanding, relating to semen retention and pleasures. The understandings and changes happen deep within the mind, because addiction and pleasure-chasing is not a one-off. It is a way of living. If your identity and ideals do not match up with your actions then you will have a dissonance that can only be fixed by A. reverting to pleasure-chasing or B. changing your identity, ideals and understandings (the self).
+
+On intimacy: sex isn’t fulfilling, intimacy is. Intimacy is actually an emotional need, not just physical, even for men. Porn does not provide intimacy, it keeps you from finding it.
 
 When sex is natural and normal it is a game played according to rules that you make up yourselves without giving a moment’s thought to how others do it or how it is supposed to be done.
 
-Fixating on the naked, sexual parts of women dulls your ability to appreciate the beauty of their smile, or their eyes lighting up when they talk or laugh. After quitting porn, you will be amazed how beautiful real, everyday women are — even with their clothes on!
+Fixating on the naked, sexual parts of women dulls your ability to appreciate the beauty of their smile, or their eyes lighting up when they talk or laugh. After quitting porn, you will be amazed how beautiful real, everyday women are — even with their clothes on.
+
+The skewed image porn creates (that society accepts) skews the vision of what a healthy relationship looks like. It makes it difficult for people to find meaningful partners (because they are looking for perfection) and when they do find partners, they want them for pleasure, not for connection. Such a shallow desire is just another craving for pleasure
 
 A lot of external battles happen because your internal state is not good. When you’re naturally internally peaceful you’re going to pick fewer fights. You’re going to be more loving without expecting anything in return. That will take care of things on the external-relationship front.
+
+"Memories of love never pass. They linger, guide, and influence long after the source of stimulation has faded. There is nothing new in this. Every person, who has been moved by GENUINE LOVE, knows that it leaves enduring traces upon the human heart. The effect of love endures, because love is spiritual in nature. The man who cannot be stimulated to great heights of achievement by love, is hopeless--he is dead, though he may seem to live."
+
+If you believe yourself unfortunate, because you have "loved and lost," perish the thought. One who has loved truly, can never lose entirely. Love is temperamental and transitory. It comes when it pleases, and goes away without warning. Accept and enjoy it while it remains, but spend no time worrying about its departure. Worry will never bring it back.
+
+## The Gift
+
+Love is a gift of energy.
+
+It is you saying: I provide myself, in all that I am to you. And you will provide all that you are to me. It is a gift of energy.
+
+If you do not believe someone deserves this gift (in love), do not provide it.
 
 ## Fear Of Love
 
 Some who leave porn or who practice semen retention gain an unhealthy view on relationships. In their attempt to leave porn, they block out all sexual thoughts, and they numb themselves into a weird state where they are fearing visiting social media or they avoid women. This fear only creates disadvantages.
 
-If you partake in this unhealthy view on relationships where you fear anything sexual or intimate, your body can go, "Hey, I guess we're just not going to have sex. We're not going to be able to masturbate, etc". Avoidance of intimacy and love can cause you to become more submissive and it can cause your libido to go down.
+If you partake in this unhealthy view on relationships where you fear anything sexual or intimate, your body can go, "Hey, I guess we're just not going to have sex. We're not going to be able to masturbate, etc". Avoidance of intimacy and love can cause you to become more submissive and it can cause your libido and energy to go down.
 
 Instead of the toxic idea that blocking out something and fearing it will help anything, you should instead build up a healthy view on what relationships truly mean, and the value of a loving partner.
 
+Some also fear loss, because they see all love has an end. But then again, all things have an end, and that is where value comes from. In relationships, cherish what you have, but do not cling onto the past, it will lead nowhere.
+
 ## Obsession
 
-On one end there is fear of love, and then on the other, there is obsession.
+On one end there is fear of love, and then on the other end, there is obsession. Obsession is good for creativity (when you give it limits). But it has no place in relationships.
+
+Attachment builds toxicity, negativity, and tunnel vision. The big picture is thrown out in place of a diminished view. If you want to grow as a person, you don't want to be obsessed with someone - or even the idea of someone - it builds negativity. You don't have to trust me on this. You can probably imagine many who are love-obsessed who throw out reason in the chase of their desires.
+
+One rule of thumb I have learnt with relationships is that you do not want to be attached by the hip to your partner if you want positivity in your life. You want to work in parrallel, providing support for one another, but neither should be dependant on another.
+
+## Breakups
+
+In reaction to breakups, something in your mind may view pornography as a way to cope. However, porn is void of love. The beauty, the purity, and benefit of a true loving relationship is absent. Understand love in its ways and you have no need to cope with anything. The beauty of love is that it can be cherished and valued while experienced with a loved partner. When a partner is lost, use the sexual energy to transmute into other areas of your life, rather than wasting it on MO.
 
 ## Entitlement
+
+Some people believe they are entitled to sexual release. But entitlement is a disease.
+
+They call it "self-love" but really it is self-destruction. When sexual energy is harnessed, it is a tool. But when untrained, it is nothing but a restriction.
+
+Conflicting information is the birth of confusion. And many preach messages that seem credible, that seem legitimate, like they know what they are talking about. But I assure you, in the world we live in, mistruths run everything. Is this "bad"? - For the group? No. For the individual? Yes.
 
 ...
