--- a/src/markdown/english/6. Neurology.md
+++ b/src/markdown/english/6. Neurology.md
@@ -1,8 +1,12 @@
-interaction with thoughts
+Porn is not a disease. Porn is a voluntary behavior.
+
+You may push back against this statement, however it is true. You will only use porn if you see some benefit to it, and only if it is the most attractive path at one time.
 
 ((fear))
 
 Just because you accidentally see porn or someone naked, does not create negative dopamine effect. Actively seeking porn or lewd material for pleasure does.
+
+“Everyone is failing, so how isn’t it likely that I too will fail?” And this is what I call, “The Failure Circle”. One person fails because they failed to follow instructions, and then those that hear of this person’s failure get doubt and fear of failure, and thus slip up. Their slip ups are reported within an online community, and others who see them get doubt and fear as well, and it goes on and on and on. They get the false impression that it’s hard, and thus it becomes hard.
 
 ((emotion))
 
