--- a/src/markdown/english/8. Transmutation.md
+++ b/src/markdown/english/8. Transmutation.md
@@ -72,7 +72,7 @@ When you occasionally listen to music (just jamming out to some uplifting stuff)
 Transmutation Method number five is to have inspired social interactions.
 
 After some time on semen retention, your life has so much more weightiness and playfulness in this. And so you're just incredibly charismatic around your friends.
-So in that state of heat, in that state of lust, in that state of pent-up sexual energy, an incredibly fun and productive thing you could do is to just meet up with your friends or meet up with a cute girl that you're into and just hang out with them.
+So in that state of pent-up sexual energy, an incredibly fun and productive thing you could do is to just meet up with your friends or meet up with a cute girl that you're into and just hang out with them.
 
 You'll find that you're so much weightier, you're so much more playful and at the same time, you're more inspiring to them as well, as you have more sexual energy available and you have more life within yourself. You can do even better in social interactions when you place a high value on your attention to what the other person is saying - they will respect it; especially if you remember what they say.
 
@@ -96,12 +96,14 @@ Scott Adams famously said, “Set up systems, not goals.” Use your judgment to
 
 Some people do not want to see you succeed.
 
-Crab mentality, also known as crab theory or crabs in a bucket (also barrel, basket, or pot) mentality, is a way of thinking best described by the phrase "if I can't have it, neither can you". The analogy in human behavior is claimed to be that members of a group will attempt to reduce the self-confidence of any member who achieves success beyond the others, out of envy, resentment, spite, conspiracy, or competitive feelings, to halt their progress. Because you're rising in energy and also healing yourself things will get electrical.
+Crab mentality, also known as crab theory, is a way of thinking, best described by the phrase: "if I can't have it, neither can you". The analogy in human behavior is claimed to be that members of a group will attempt to reduce the self-confidence of any member who achieves success beyond the others, out of envy, resentment, spite, conspiracy, or competitive feelings, to halt their progress. Because you're rising in energy and also healing yourself things will get electrical.
 
-Some people in your life may be like this. They see success and because they have not found it in themselves, they try to bring you down to their level of fufilment. What you have to realize is that clashing with these people is a waste of time: you are just fighting ignorance (which is a losing battle), and you are showing them they are relevant.
+Some people in your life may be like this. They see success and because they have not found it in themselves, they try to bring you down to their level. What you have to realize is that clashing with these people is a waste of time. You are just fighting ignorance (which is a losing battle), and you are showing them they are relevant.
 
 Instead, for people who discourage our level of energy (some call them "energy vampires"), we should be indifferent no matter through what they do. Acting indifferent will make them feel weaker. Either they will cave in and ask for your help, or they will spiral into their own negativity. In either case, you do not want to surround yourself with these types of people.
 
-If a friend is not someone who encourages your self-growth, tell them (in person) directly and unforgivingly their problems and if they do not have the humility to change, cut them off. Family is trickier, because you can't give up on family. But at the same time, parents or siblings can be negative influences on you whether they realize it or not. For this, I would say to change your environment often, learn how to deal with human nature and learn how to influence those who do not want to listen to you.
+If a friend is not someone who encourages your self-growth, tell them (in person) directly and unforgivingly the issues you have with them and if they do not have the humility to change, cut them off. Family is trickier, because you can't give up on family. But at the same time, parents or siblings can be negative influences on you whether they realize it or not. For this, I would say to change your environment often, learn how to deal with human nature and learn how to influence those who do not want to listen to you.
 
 In any case, if you hurt other people because they have expectations of you, that’s their problem. If they have an agreement with you, it’s your problem. But, if they have an expectation of you, that’s completely their problem. It has nothing to do with you. They’re going to have lots of expectations out of life. The sooner you can dash their expectations, the better.
+
+Having a good standard for friends will set you up for success in all ways. You should not befriend someone who is a negative influence to your energy, even if you are lonely.
