--- a/src/markdown/english/4. Brainwashing.md
+++ b/src/markdown/english/4. Brainwashing.md
@@ -54,4 +54,4 @@ When you discover the truth, bad habits can disappear with little effort through
 
 More broadly, I may see some facet of myself that I don’t like. Maybe I see it in a friend and then can’t unsee it to the point that we can no longer be friends.
 
-Self-improvement is just a dressed up form of self-conflict.
+"Self-improvement" is just a dressed up form of self-conflict.
