--- a/src/markdown/english/5. Love.md
+++ b/src/markdown/english/5. Love.md
@@ -50,6 +50,6 @@ Some people believe they are entitled to sexual release. But entitlement is a di
 
 They call it "self-love" but really it is self-destruction. When sexual energy is harnessed, it is a tool. But when untrained, it is nothing but a restriction.
 
-Conflicting information is the birth of confusion. And many preach messages that seem credible, that seem legitimate, like they know what they are talking about. But I assure you, in the world we live in, mistruths run everything. Is this "bad"? - For the group? No. For the individual? Yes.
+Conflicting information is the birth of confusion. And many preach messages that seem credible, that seem legitimate, like they know what they are talking about. But I assure you, in the world we live in, mistruths run everything. Is this "bad"? - For the group? No. For the individual? Yes. This is because truth does not 
 
 ...
