--- a/src/markdown/english/8. Transmutation.md
+++ b/src/markdown/english/8. Transmutation.md
@@ -46,6 +46,8 @@ The first method of transmutation is simply working out. If you exercise you bri
 
 I try to do at least some kind of exercise every morning, first thing in the morning and that is either lifting weights, calisthenics, going for a run or doing yoga and I highly highly encourage you to do the same.
 
+Regualar exercise also increases the health of your dopamine receptors (D2/D3).
+
 ### Mental Silence
 
 The second method of transmutation is meditation. This is one of the most important transmutative processes but I think it's often easier and better to meditate after you've worked out. I've just found it to be true that once I've had a workout and I've got oxygen running through my brain, when I meditate I go much deeper into that meditation; and it's almost like this deep lost trance or this stepping into the silence, a true void and when I emerge out of it I have all these insights and a deeper understanding of how I should conduct myself to bring about results and joy in my life.
@@ -107,3 +109,11 @@ If a friend is not someone who encourages your self-growth, tell them (in person
 In any case, if you hurt other people because they have expectations of you, that’s their problem. If they have an agreement with you, it’s your problem. But, if they have an expectation of you, that’s completely their problem. It has nothing to do with you. They’re going to have lots of expectations out of life. The sooner you can dash their expectations, the better.
 
 Having a good standard for friends will set you up for success in all ways. You should not befriend someone who is a negative influence to your energy, even if you are lonely.
+
+## Choice (tbf)
+
+In the end, you can choose meaning in your life or you can choose comfort.
+
+If you do not spend the energy you receive you will likely waste it via masturbation. One thing you need to realise is that because MO is mentally linked to porn, you don't want to be using it as a substitute for PMO if you waste your energy via MO. While MO has drawbacks, energy can be regathered within a week generally, while with porn, it takes weeks or months for the body/mind to recover.
+
+If you masturbate or have sex too often it will negatively impact your body and energy levels. Instead of wasting your energy, look for the value within sexual energy, and it can be transmuted into things you find meaningful.
