--- a/src/markdown/english/1. Introduction.md
+++ b/src/markdown/english/1. Introduction.md
@@ -2,6 +2,8 @@ Your greatest superpower is the ability to change yourself.
 
 This book is not for the unserious. This book is for those that truly want to grow, find peace, and find freedom from the porn trap. For those interested in quick "productivity tips" or numbered principles, these will not be found in this book. Instead, this book will provide you with understandings you can use to make your own decisions.
 
+Many people think that all they need to do to quit porn is to...stop doing it. They say, "just stop watching it. Don’t open the window. Don’t watch porn. Distract yourself." But porn is not a choice. Consider this: Did you ever make the ‘positive’ choice that you must have porn to masturbate? Or that you should/must/need porn-induced fantasies to spice up sex with your partner? Or, that at certain times in your life, you couldn’t enjoy a good night’s sleep or perhaps even pass an evening after a hard day at work without surfing for porn? Or that you couldn’t concentrate or handle stress without it? At what stage did you decide that you needed porn, that you needed it permanently in your life, feeling insecure, even panicstricken without porn, without your online harem? The fact is, we never made this choice. Porn is not a choice, but a trap
+
 Scrap the idea of "methods", "guides" and "how-to's". How-to's don't work except for extreme basics. If success were prescriptive, then everybody would be a success. There are many who obsessively browse "nofap" material only continuing in the hope that they could one day become successful. If your desire has become dependent, like you are hysterically driven to obtain something whatever the cost, then somewhere deep down inside you do not really believe that you can achieve it.
 
 Most likely, for those who have already been doing "nofap" or semen retention practices, they are likely familiar with failure.
