--- a/src/markdown/english/8. Transmutation.md
+++ b/src/markdown/english/8. Transmutation.md
@@ -46,13 +46,15 @@ The first method of transmutation is simply working out. If you exercise you bri
 
 I try to do at least some kind of exercise every morning, first thing in the morning and that is either lifting weights, calisthenics, going for a run or doing yoga and I highly highly encourage you to do the same.
 
-Regualar exercise also increases the health of your dopamine receptors (D2/D3).
+Regular exercise also increases the health of your dopamine receptors (D2/D3).
 
 ### Mental Silence
 
 The second method of transmutation is meditation. This is one of the most important transmutative processes but I think it's often easier and better to meditate after you've worked out. I've just found it to be true that once I've had a workout and I've got oxygen running through my brain, when I meditate I go much deeper into that meditation; and it's almost like this deep lost trance or this stepping into the silence, a true void and when I emerge out of it I have all these insights and a deeper understanding of how I should conduct myself to bring about results and joy in my life.
 
 One thing I would advise, is that the mindfulness you practice in meditation should not be the end goal, but the goal should be to have mindfulness in every moment, to the point where meditation is no longer needed.
+
+Meditation also supports positive dopamine production significantly.
 
 ### Deep Work / Creativity
 
